new chages occurs

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             <label id="lb3" for="massage">Enter massage</label>
             <input type="message"  id="mg">
            </div>
+           <p class="new">
+             new one added
+           </p>
 
           </div>
 
